# librime-copilot

./: .clang-format  .gitignore  CMakeLists.txt  README.md  msvc_shim.h
.github/workflows/: build.yml  ci.yml  debug-env.yml  debug-flags.yml  verify-fix.yml
clients/neovim/: README.md
clients/neovim/lua/: rime_ime.lua
cmake/: LlamaConfig.cmake
data/: luna_pinyin.custom.yaml
src/: auto_spacer.cc  auto_spacer.h  auto_spacer_filter.cc  auto_spacer_filter.h  copilot.cc  copilot.h  copilot_db.cc  copilot_db.h  copilot_engine.cc  copilot_engine.h  copilot_module.cc  copilot_plugin.h  copilot_translator.cc  copilot_translator.h  db_provider.h  filters.cc  history.cc  history.h  ime_bridge.cc  ime_bridge.h  imk_client.h  imk_client.mm  llm.cc  llm.h  llm_provider.cc  llm_provider.h  provider.h  raw_input_filter.cc  raw_input_filter.h  select_character.cc  select_character.h  utils.cc  utils.h
tools/: CMakeLists.txt  ax_poc.mm  build_copilot.cc
